--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 {% include base_path %}
 
 <br>
-<i class="fa fa-fw fa-envelope" aria-hidden="true"></i> dogag@kth.se</a>
+<i class="fa fa-fw fa-envelope" aria-hidden="true"></i> dgurgunoglu@aselsan.com</a>
 <br>
 <i class="fa fa-fw fa-envelope" aria-hidden="true"></i> dogagurgun@gmail.com</a>
 <br>
-<i class="fa fa-map-marker" aria-hidden="true"></i> Room 618, Floor 6, Malvinas Väg 10, 11428 Stockholm, Sweden</a>
+<i class="fa fa-map-marker" aria-hidden="true"></i> Ihsan Dogramaci Bulvari 37/2, 06800 Ankara, Türkiye</a>
